installed footer, collected facebook link

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,20 @@
 }
 
 .foot{
+  padding: 20px 0;
+  color: #f0f0f0;
   width: 100%;
   background-color: black;
+  position: absolute;
+  bottom: 0;
   /* stuff will go here */
+  .bot-sec-1{
+
+  }
+  .bot-sec-2{
+
+  }
+  .bot-sec-3{
+
+  }
 }
