added font-awesome successfully. base of site is styled

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <div class="container">
       <%= link_to image_tag("hnp-logo.jpg"), home_index_path %>
       <!-- https://www.facebook.com/TheHNP/ -->
-      
+      <a href="https://www.facebook.com/TheHNP/"><i class="fa fa-facebook"></i></a>
       <ul class="nav nav-tabs links">
         <li><%= link_to "FAQ", home_faq_path %></li>
         <li><%= link_to "Forums", home_forum_path %></li>
