--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+ /*
+ *= require font-awesome
+ */
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -20,13 +23,31 @@
 .head{
   width: 100%;
   background-color: black;
+  color: #f0f0f0;
   img{
     height: 40px;
     float: left;
   }
+  i{
+    float: left;
+    font-size: 25px;
+    position: absolute;
+    margin: 0 20px;
+    padding: 10px 0;
+  }
+  i:hover{
+    background-color: #f0f0f0;
+    color: black;
+  }
+  a{
+    color: inherit;
+  }
   .links {
     li{
       float: right;
+    }
+    li:hover{
+      color: black;
     }
   }
 }
@@ -40,6 +61,10 @@
   bottom: 0;
   /* stuff will go here */
   .bot-sec-1{
+    ul{
+      list-style: none;
+      padding: 0
+    }
 
   }
   .bot-sec-2{
