--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,16 @@
       </ul>
     </div>
   </section>
+  <section class="sub-head">
+    <div class="container">
+      <ul class="category-list">
+        <li>PC</li>
+        <li>Xbox</li>
+        <li>Playstation</li>
+        <li>Switch</li>
+      </div>
+    </div>
+  </section>
   <section class="main">
     <div class="container">
       <%= yield %>
@@ -31,19 +41,19 @@
         <div class="bot-sec-1 col-md-4">
           <h5>Reviews</h5>
           <ul>
-            <li>PC</li>
-            <li>Xbox</li>
-            <li>Playstation</li>
-            <li>Switch</li>
+            <li><a href="#">PC</a></li>
+            <li><a href="#">Xbox</a></li>
+            <li><a href="#">Playstation</a></li>
+            <li><a href="#">Switch</a></li>
           </ul>
         </div>
         <div class="bot-sec-2 col-md-4">
           <h5>About</h5>
           <ul>
-            <li>Privacy Policy</li>
-            <li>Help</li>
-            <li>Terms of Use</li>
-            <li>Advertise</li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Advertise</a></li>
           </ul>
         </div>
         <div class="bot-sec-3 col-md-4">
