--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HnpProto</title>
+  <title>The HNP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -14,7 +14,10 @@
       <%= link_to image_tag("hnp-logo.jpg"), home_index_path %>
       <!-- https://www.facebook.com/TheHNP/ -->
       <a href="https://www.facebook.com/TheHNP/" target="_blank"><i class="fa fa-facebook"></i></a>
+      <!-- fa-youtube-play -->
+      <a href="https://www.facebook.com/TheHNP/" target="_blank"><i class="fa fa-youtube-play"></i></a>
       <ul class="nav nav-tabs links">
+        <li><%= link_to "Contact Us", home_contact_path %></li>
         <li><%= link_to "FAQ", home_faq_path %></li>
         <li><%= link_to "Forums", home_forum_path %></li>
       </ul>
@@ -23,6 +26,7 @@
   <section class="sub-head">
     <div class="container">
       <ul class="category-list">
+        <li>All</li>
         <li>PC</li>
         <li>Xbox</li>
         <li>Playstation</li>
@@ -57,9 +61,10 @@
           </ul>
         </div>
         <div class="bot-sec-3 col-md-4">
-          <h5>Contact</h5>
+          <h5>Social</h5>
           <ul>
-            <li>thenhp@gmail.com</li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Youtube</a></li>
           </ul>
         </div>
       </div>
