fixed so I wouldn't need to repeat this again

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,11 @@
   <section class="sub-head">
     <div class="container">
       <ul class="category-list">
-        <li>All</li>
-        <li>PC</li>
-        <li>Xbox</li>
-        <li>Playstation</li>
-        <li>Switch</li>
+        <li><a href="#">All</a></li>
+        <li><a href="#">PC</a></li>
+        <li><a href="#">Xbox</a></li>
+        <li><a href="#">Playstation</a></li>
+        <li><a href="#">Switch</a></li>
       </div>
     </div>
   </section>
