--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -8,7 +8,8 @@
 
 #post
   %h1= @post.title
-  %p= @post.content
+  %p= raw Markdown.new(@post.content).to_html
+  -# %p= @post.content
 
   #comments
     %h2= @post.comments.count
