--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <div class="wrap">
     <section class="head">
       <div class="container">
-        <%= link_to image_tag("hnp-logo.jpg"), home_index_path %>
+        <%= link_to image_tag("hnp-logo.jpg"), root_path %>
         <!-- https://www.facebook.com/TheHNP/ -->
         <a href="https://www.facebook.com/TheHNP/" target="_blank"><i class="fa fa-facebook"></i></a>
         <!-- fa-youtube-play -->
@@ -20,7 +20,7 @@
         <ul class="nav nav-tabs links">
           <li><%= link_to "Contact Us", home_contact_path %></li>
           <li><%= link_to "FAQ", home_faq_path %></li>
-          <li><%= link_to "Forums", root_path %></li>
+          <li><%= link_to "Forums", home_forum_path %></li>
         </ul>
       </div>
     </section>
