--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -2,4 +2,4 @@
 
 = render 'form'
 
-= link_to "Cancel", root_path, class: "btn btn-primary"
+= link_to "Cancel", root_path, class: "btn btn-danger"
