--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <a href="https://www.facebook.com/TheHNP/" target="_blank"><i class="fa fa-youtube-play"></i></a>
         <ul class="nav nav-tabs links">
           <li><%= link_to "Contact Us", home_contact_path %></li>
-          <li><%= link_to "FAQ", home_faq_path %></li>
+          <li><%= link_to "FAQ", faqs_path %></li>
           <li><%= link_to "Forums", home_forum_path %></li>
         </ul>
       </div>
