--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -1,10 +1,15 @@
-<h1>Frequently Asked questions</h1>
+<h1>Frequently Asked Questions</h1>
 
-<% @faqs.each do |faq| %>
-  <div>
-    <h4><%= faq.question %></h4>
-    <h5><%= faq.answer %></h5>
-  <div>
-<% end %>
+<div class="row">
+  <div class="col-md-8">
+    <% @faqs.each do |faq| %>
+      <div>
+        <%= link_to "Edit", edit_faq_path(faq), class:"btn btn-primary" %>
+        <h4><%= faq.question %></h4>
+        <h5><%= faq.answer %></h5>
+      <div>
+    <% end %>
+  </div>
+</div>
 
 <%= link_to "New", new_faq_path, class:"btn btn-success" %>
