--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -5,6 +5,7 @@
     <% @faqs.each do |faq| %>
       <div>
         <%= link_to "Edit", edit_faq_path(faq), class:"btn btn-primary" %>
+        <%= link_to "Delete", faq, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger" %>
         <h4><%= faq.question %></h4>
         <h5><%= faq.answer %></h5>
       <div>
