Chris Tucker slot in. More optimization.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.all-contain{
+  text-align: center;
+  .text-contain{
+    /* future proof */
+  }
+  .img-contain{
+    .tucker{
+      width: 80%;
+      margin: 40px 0;
+    }
+  }
+
+}
