--- a/app/views/home/forum.html.erb
+++ b/app/views/home/forum.html.erb
@@ -1,2 +1,9 @@
-<h1>Forum</h1>
-<p>This is going to be the Forums</p>
+<div class="all-contain">
+  <div class="text-contain">
+    <h1>Forums</h1>
+    <h4>The Forums are under construction! It's going to be HOT!</h4>
+  </div>
+  <div class="img-contain">
+    <%= image_tag "chris_tucker.gif", class:"tucker" %>
+  </div>
+</div>
