--- a/app/views/faqs/show.html.erb
+++ b/app/views/faqs/show.html.erb
@@ -1,5 +1,2 @@
 <h1>Frequently Asked Questions</h1>
-<p>The list of frequently asked questions will go here</p>
-
-<%= link_to "Edit", edit_faq_path, class: "btn btn-primary" %>
-<%= link_to "Delete", class: "btn btn-danger" %>
+<p>You should't be seeing this page!! Let us know if you do!!</p>
