--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,11 +94,17 @@ html{
         padding: 0 15px 0 0;
         float: right;
         text-align: right;
+        h5{
+          display: inline;
+          font-size: 20px;
+          padding: 0 0 5px 0;
+          font-family: 'Barlow Condensed', sans-serif;
+        }
         i{
           color: #f0f0f0;
           font-size: 20px;
           margin: 0 0 0 4%;
-          padding: 5px 0;
+          padding: 5px;
           /*position: relative;
           top: -5px; */
 
