enlarged text for articles

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -8,7 +8,7 @@
 
 #post
   %h1= @post.title
-  %p= raw Markdown.new(@post.content).to_html
+  %h3= raw Markdown.new(@post.content).to_html
   -# %p= @post.content
 
   #comments
