--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,6 +1,6 @@
--if user_signed_in?
+-if user_signed_in? && !current_user.member?
   = link_to "New Post", new_post_path, class: "btn btn-success"
--else
+-elsif !user_signed_in?
   = link_to "Sign Up", new_user_registration_path, class: "btn btn-success"
   = link_to "Sign In", new_user_session_path, class: "btn btn-primary"
 
