updated the README and the social media links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,8 @@
     <section class="head">
       <div class="container">
         <%= link_to image_tag("hnp-logo.jpg"), root_path %>
-        <!-- https://www.facebook.com/TheHNP/ -->
         <a href="https://www.facebook.com/TheHNP/" target="_blank"><i class="fa fa-facebook"></i></a>
-        <!-- fa-youtube-play -->
-        <a href="https://www.facebook.com/TheHNP/" target="_blank"><i class="fa fa-youtube-play"></i></a>
+        <a href="https://www.youtube.com/channel/UC-iJtD2i55orjp7EUPDwsRA" target="_blank"><i class="fa fa-youtube-play"></i></a>
         <ul class="nav nav-tabs links">
           <li><%= link_to "Contact Us", home_contact_path %></li>
           <li><%= link_to "FAQ", faqs_path %></li>
@@ -90,8 +88,8 @@
             <div class="bot-sec-3 col-md-4">
               <h5>Social</h5>
               <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Youtube</a></li>
+                <li><a href="https://www.facebook.com/TheHNP/">Facebook</a></li>
+                <li><a href="https://www.youtube.com/channel/UC-iJtD2i55orjp7EUPDwsRA">Youtube</a></li>
               </ul>
             </div>
             <div class="bot-img">
