--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,3 +1,3 @@
 = simple_form_for([@post, @post.comments.build]) do |f|
-  = f.input :comment
+  = f.input :comment, input_html: { class: 'form-control' }
   = f.submit class: "btn btn-success"
