--- a/app/views/comments/edit.html.haml
+++ b/app/views/comments/edit.html.haml
@@ -1,6 +1,6 @@
 %h1 Edit Reply
 
 = simple_form_for([@post, @comment]) do |f|
-  = f.input :comment
+  = f.input :comment, input_html: { class: 'form-control' }
   = f.submit class:"btn btn-primary"
   = link_to "Cancel", root_path, class: "btn btn-danger"
