--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -190,7 +190,7 @@ html{
           text-align: center;
           clear: both;
           img{
-            height: 50px;
+            width: 200px;
           }
         }
       }
