--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,12 +88,12 @@
             <div class="bot-sec-3 col-md-4">
               <h5>Social</h5>
               <ul>
-                <li><a href="https://www.facebook.com/TheHNP/">Facebook</a></li>
-                <li><a href="https://www.youtube.com/channel/UC-iJtD2i55orjp7EUPDwsRA">Youtube</a></li>
+                <li><a href="https://www.facebook.com/TheHNP/" target="_blank">Facebook</a></li>
+                <li><a href="https://www.youtube.com/channel/UC-iJtD2i55orjp7EUPDwsRA" target="_blank">Youtube</a></li>
               </ul>
             </div>
             <div class="bot-img">
-              <%= link_to image_tag("hnp-logo.jpg"), home_index_path %>
+              <%= link_to image_tag("hnp-satellite3.png"), home_index_path %>
             </div>
           </footer>
         </div>
